--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,9 @@
     "@typescript-eslint/eslint-plugin"
   ],
   "rules": {
+    "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/interface-name-prefix": "off",
+    "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/member-naming": "off",
     "@typescript-eslint/adjacent-overload-signatures": "off",
     "@typescript-eslint/no-unused-vars": "off",
