--- a/package.json
+++ b/package.json
@@ -2,9 +2,17 @@
   "name": "typescript-express-starter",
   "version": "1.0.0",
   "description": "",
-  "main": "app.ts",
+  "main": "main.ts",
   "scripts": {
-    "start": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/main.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/main.ts",
+    "clean": "shx rm -rf build/*",
+    "copy": "cpx 'src/migrations/**' 'build/src/migrations' && cpx 'tsconfig.json' 'build/'",
+    "lint": "eslint \"src/**/*.ts\" --ignore-pattern '__tests__/*.spec.ts'",
+    "prebuild": "npm run lint && npm run clean",
+    "build:dev": "npm run prebuild && tsc && npm run copy",
+    "build:staging": "npm run prebuild && tsc && npm run copy",
+    "start:dev": "TS_NODE_FILES=true && TS_NODE_PROJECT='build/tsconfig.json' && node -r ts-node/register -r tsconfig-paths/register build/src/main.js",
+    "start:staging": "node -r tsconfig-paths/register src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,19 +20,26 @@
   "dependencies": {
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^2.4.0",
     "@typescript-eslint/parser": "^2.4.0",
     "cors": "^2.8.5",
+    "cpx": "^1.5.0",
     "eslint": "^6.5.1",
     "express": "^4.17.1",
     "inversify": "^5.0.5",
     "inversify-express-utils": "^6.3.2",
     "knex": "^0.21.16",
     "knex-stringcase": "^1.4.3",
+    "moment-timezone": "^0.5.32",
+    "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
-    "typescript": "^4.1.3"
+    "shx": "^0.3.3",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.1.3",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
