auth: email and password

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.ts",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/main.ts",
+    "dev": "tsnd --poll --interval 600 --no-notify --watch src --ignore-watch src/migrations --ignore-watch '__tests__/*.spec.ts' --ignore-watch node_modules -r tsconfig-paths/register ./src/main.ts",
     "clean": "shx rm -rf build/*",
     "copy": "cpx 'src/migrations/**' 'build/src/migrations' && cpx 'tsconfig.json' 'build/'",
     "lint": "eslint \"src/**/*.ts\" --ignore-pattern '__tests__/*.spec.ts'",
@@ -18,18 +18,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^2.4.0",
     "@typescript-eslint/parser": "^2.4.0",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "cpx": "^1.5.0",
     "eslint": "^6.5.1",
     "express": "^4.17.1",
     "inversify": "^5.0.5",
     "inversify-express-utils": "^6.3.2",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.16",
     "knex-stringcase": "^1.4.3",
     "moment-timezone": "^0.5.32",
