auth: facebook & username

--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "main.ts",
   "scripts": {
     "dev": "tsnd --poll --interval 600 --no-notify --watch src --ignore-watch src/migrations --ignore-watch '__tests__/*.spec.ts' --ignore-watch node_modules -r tsconfig-paths/register ./src/main.ts",
+    "dev2": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' -r tsconfig-paths/register ./src/main.ts",
     "clean": "shx rm -rf build/*",
-    "copy": "cpx 'src/migrations/**' 'build/src/migrations' && cpx 'tsconfig.json' 'build/'",
+    "copy": "cpx 'knexfile.ts' 'build/' && cpx 'src/migrations/**' 'build/src/migrations' && cpx 'tsconfig.json' 'build/'",
     "lint": "eslint \"src/**/*.ts\" --ignore-pattern '__tests__/*.spec.ts'",
     "prebuild": "npm run lint && npm run clean",
     "build:dev": "npm run prebuild && tsc && npm run copy",
     "build:staging": "npm run prebuild && tsc && npm run copy",
     "start:dev": "TS_NODE_FILES=true && TS_NODE_PROJECT='build/tsconfig.json' && node -r ts-node/register -r tsconfig-paths/register build/src/main.js",
     "start:staging": "node -r tsconfig-paths/register src/main.js",
+    "migration": "./node_modules/.bin/knex migrate:latest",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -21,9 +23,11 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
+    "@types/express-useragent": "^1.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.22",
+    "@types/node-fetch": "^2.5.8",
     "@typescript-eslint/eslint-plugin": "^2.4.0",
     "@typescript-eslint/parser": "^2.4.0",
     "bcrypt": "^5.0.0",
@@ -32,6 +36,7 @@
     "cpx": "^1.5.0",
     "eslint": "^6.5.1",
     "express": "^4.17.1",
+    "express-useragent": "^1.0.15",
     "inversify": "^5.0.5",
     "inversify-express-utils": "^6.3.2",
     "jsonwebtoken": "^8.5.1",
@@ -39,6 +44,7 @@
     "knex-stringcase": "^1.4.3",
     "moment-timezone": "^0.5.32",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "shx": "^0.3.3",
