--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     // "noEmit": true,                        /* Do not emit outputs. */
     // "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
     // "downlevelIteration": true,            /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
-    "isolatedModules": true,               /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
+    // "isolatedModules": true,               /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
 
     /* Strict Type-Checking Options */
     "strict": true,                           /* Enable all strict type-checking options. */
@@ -82,7 +82,7 @@
   "include": [
     "src/**/*.ts",
     "__tests__/**/*.ts"
-  ],
+, "src/migrations/20210121131800_init.ts", "src/migrations/20210121131801_restore_backup.ts"  ],
   "exclude": [
     "node_modules"
   ]
